# jotunheim

./: Cargo.toml  Dockerfile  dockerbuild.sh  dotenv.example
ext/bm180/: Program.cs  bm180.csproj
src/: config.rs  db.rs  main.rs  msg.rs  router.rs  sensors.rs  switches.rs  utils.rs  webhook.rs
src/sensors/: api.rs  bme680.rs  bmp180.rs  external.rs  mod.rs  mqtt_heater.rs
src/sensors/api/: netatmo.rs
src/sensors/mqtt_heater/: requests.rs  state.rs  util.rs
src/switches/: gpio.rs  mod.rs
