[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
name = "jotunheim"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
prometheus = "0.13"
async-std = { version = "1.10", features = [
  "attributes",
  "unstable",
  "tokio1",
] }
anyhow = "1"
xactor = "0.7"
async-trait = "0.1"
tide = "0.16"
log = "0.4"
bme680 = { version = "0.6", optional = true }
embedded-hal = { version = "0.2", optional = true }
linux-embedded-hal = { version = "0.3", optional = true }
i2cdev = { version = "0.5", optional = true }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
clap = "3"
envconfig = "0.10"
env_logger = "0.10"
env = "*"
rust_gpiozero = { git = "https://github.com/rahul-thakoor/rust_gpiozero.git", version = "*", optional = true }
surf = { version = "2", features = [
  "h1-client-rustls",
], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
serde_repr = { version = "*", optional = true }
base64 = "0.13"
geohash = "0.12"
rumqttc = { version = "0.18", optional = true }
url = "2"

[features]
default = ["sensor-bme680", "switch-gpio", "sensor-api", "sensor-external"]
sensor-bme680 = ["bme680", "embedded-hal", "linux-embedded-hal", "i2cdev"]
sensor-mqtt-heater = ["rumqttc", "serde_json", "serde", "surf", "serde_repr"]
switch-gpio = ["rust_gpiozero"]
sensor-api = ["serde_urlencoded", "surf", "serde_json", "serde"]
sensor-external = ["serde_json", "serde", "surf"]
